--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ h1 {
     text-align: center;
 }
 p {
+    margin-top: 100px;
     font: 250px;
     color: rgb(129, 48, 48);
     text-align: center;
